--- a/digital marketing.html
+++ b/digital marketing.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Digital Marketing Specialist Job - JobSphere</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
   <style>
     body {
       margin: 0;
@@ -116,7 +115,7 @@
     <div class="section">
       <h2>Educational Requirements</h2>
       <ul>
-        <li>Bachelor’s degree in Marketing, Communications, or a related field.</li>
+        <li>Bachelor's degree in Marketing, Communications, or a related field.</li>
         <li>Relevant certifications (e.g., Google Ads, HubSpot, Meta Blueprint) are a plus.</li>
       </ul>
     </div>
