--- a/full and part.html
+++ b/full and part.html
@@ -760,7 +760,7 @@
             </div>
             
             <div class="footer-links">
-                <a href="home.html">Home</a>
+                <a href="index.html">Home</a>
                 <a href="deep1.html">Jobs</a>
                 <a href="team.html">About Us</a>
                 <a href="contact.html">Contact</a>
