--- a/privacy policy.html
+++ b/privacy policy.html
@@ -171,7 +171,7 @@
     <h2>8. Contact Us</h2>
     <p>If you have questions, contact us at &#128231; [ jobsphere24/7@gmail.com ]</p>
 
-    <p><a href="home.html">← Back to Home</a></p>
+    <p><a href="index.html">← Back to Home</a></p>
   </div>
 <footer>
         <div class="footer-content">
@@ -181,7 +181,7 @@
             </div>
             
             <div class="footer-links">
-                <a href="home.html">Home</a>
+                <a href="index.html">Home</a>
                 <a href="deep1.html">Jobs</a>
                 <a href="team.html">About Us</a>
                 <a href="contact.html">Contact</a>
