--- a/terms and conditions.html
+++ b/terms and conditions.html
@@ -169,7 +169,7 @@
     <h2>8. Governing Law</h2>
     <p>These Terms shall be governed by and construed under the laws of India.</p>
 
-    <p><a href="home.html">← Back to Home</a></p>
+    <p><a href="index.html">← Back to Home</a></p>
   </div>
   <footer>
         <div class="footer-content">
@@ -179,7 +179,7 @@
             </div>
             
             <div class="footer-links">
-                <a href="home.html">Home</a>
+                <a href="index.html">Home</a>
                 <a href="deep1.html">Jobs</a>
                 <a href="team.html">About Us</a>
                 <a href="contact.html">Contact</a>
