--- a/charan rb.html
+++ b/charan rb.html
@@ -401,7 +401,7 @@
         </div>
     </div>
 
-    <div class="close"><a class="back-btn" href="home.html">← Back to Home</a></div>
+    <div class="close"><a class="back-btn" href="index.html">← Back to Home</a></div>
     
     <footer>
         <div class="container">
