--- a/company.html
+++ b/company.html
@@ -444,7 +444,7 @@
             </div>
             
             <ul>
-                <li><a href="home.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="team.html">Our Team</a></li>
                 <li><a href="deep1.html">Browse Jobs</a></li>
                 <li><a href="charan rb.html">Resume-Builder</a></li>
@@ -877,7 +877,7 @@
             </div>
             
             <div class="footer-links">
-                <a href="home.html">Home</a>
+                <a href="index.html">Home</a>
                 <a href="deep1.html">Jobs</a>
                 <a href="team.html">About Us</a>
                 <a href="contact.html">Contact</a>
