--- a/contact.html
+++ b/contact.html
@@ -279,7 +279,7 @@
         
         <ul>
 
-      <li><a href="home.html">Home</a></li>
+      <li><a href="index.html">Home</a></li>
 
       <li><a href="team.html" target="_main"> Our Team</a></li>
 
@@ -330,7 +330,7 @@
             </div>
             
             <div class="footer-links">
-                <a href="home.html">Home</a>
+                <a href="index.html">Home</a>
                 <a href="deep1.html">Jobs</a>
                 <a href="team.html">About Us</a>
                 <a href="contact.html">Contact</a>
