--- a/index.html
+++ b/index.html
@@ -530,6 +530,7 @@
             text-align: left;
             box-sizing: border-box;
             background: black;
+            color: white;
         }
 
         .search-container input[type="text"]::placeholder {
