--- a/full and part.html
+++ b/full and part.html
@@ -87,6 +87,7 @@
             text-align: left;
             box-sizing: border-box;
             background: black;
+            color: white;
         }
 
         .search-container input[type="text"]::placeholder {
