--- a/contact.html
+++ b/contact.html
@@ -287,6 +287,8 @@
 
       <li><a href="charan rb.html">Resume-Builder</a></li>
 
+      <li><a href="hired data.html">Hired</a> </li>
+
       <li><a href="contact.html" target="_main">Contact</a></li>
 
       <li><a href="login.html" class="btn">Login</a></li>
