--- a/team.html
+++ b/team.html
@@ -456,6 +456,7 @@
                 <li><a href="team.html">Our Team</a></li>
                 <li><a href="deep1.html">Browse Jobs</a></li>
                 <li><a href="charan rb.html">Resume-Builder</a></li>
+                <li><a href="hired data.html">Hired</a> </li>
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="login.html" class="btn">Login</a></li>
             </ul>
