--- a/team.html
+++ b/team.html
@@ -55,6 +55,11 @@
             overflow: hidden;
             text-decoration: none;
         }
+
+        a {
+            text-decoration: none;
+            color: white;
+        }
            nav {
                 display: flex;
                 justify-content: space-between;
