--- a/durga.html
+++ b/durga.html
@@ -116,9 +116,25 @@
         color:#00c897 ;
         cursor: pointer;
     }
+
+    .close{
+            padding: 10px;
+            text-align: center;
+        }
+
+        .back-btn{
+            color: white;
+            padding: 10px;
+        }
+
+        .back-btn:hover{
+            color: green;
+        }
+
   </style>
 </head>
 <body>
+   <div class="close"><a class="back-btn" href="team.html">← Go Back</a></div>
 
   <!-- Hero -->
     <div class="team-member">
