--- a/deep1.html
+++ b/deep1.html
@@ -436,7 +436,7 @@
  
         <div class="fe-box">
            <!-- Basic card structure with link -->
-            <a href="http://127.0.0.1:5500/html/freelancers.html" target="_self"  class="card-link">
+            <a href="freelancers.html" target="_self"  class="card-link">
                   <div class="card">
                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT1plcn83jkSBE-5PWt8ZOAhLNv-xKmHFLS0w&s">
                 <h3>Choose Freelancer</h3>
@@ -481,7 +481,7 @@
 
         <ul class="job-id">
             <li class="active" data-target="all">Recent jobs</li>
-            <li data-target="freelancers"><a href="freelancers.html"> Freelancers</a></li>
+            <li data-target="freelancers"><a href="main freelancers.html"> Freelancers</a></li>
             <li data-target="Fulltime"><a href="full and part.html"> Full/Part time jobs</a></li>
         </ul>
 
