--- a/charan.html
+++ b/charan.html
@@ -1,11 +1,12 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Vijetha - Portfolio</title>
+  <title>Charan;s -Portfolio</title>
   <style>
- body {
+    body {
       margin: 0;
       color: #00c897;
       font-family: Arial, sans-serif;
@@ -116,58 +117,59 @@
         color:#00c897 ;
         cursor: pointer;
     }
-
   </style>
 </head>
 <body>
 
-  <!-- Hero -->
-  <section class="hero">
-    <img src="https://t4.ftcdn.net/jpg/12/66/42/61/360_F_1266426178_aadAW4BCtCx7DNq4fMSzEQEfq0MZ1brK.jpg" alt="Vijetha">
-    <h1>Vijetha</h1>
-    <h2>UX/UI Designer</h2>
+  <!-- Hero -->    
+   <div class="team-member">
+
+    <img src="https://i.pinimg.com/736x/37/79/fd/3779fd1397f8d93ac80f286a876ddc58.jpg" alt="Charan">
+    <h1>Charan</h1>
+    <h2>Team Lead & Full Stack Developer</h2>
     <p>
-      Passionate UX/UI Designer with a focus on creating user-friendly interfaces 
-      and seamless digital experiences. Skilled in wireframing, prototyping, and design tools.
+      Passionate about building scalable web apps and leading development teams. 
+      Skilled in React, Node.js, and modern web technologies.
     </p>
-  </section>
+    </div>
+
 
   <!-- Skills -->
   <section class="section">
-    <h2>Skills</h2>
+    <h1>Skills</h1>
     <div class="skills">
-      <span>Figma</span>
-      <span>Adobe XD</span>
       <span>HTML</span>
       <span>CSS</span>
-      <span>Prototyping</span>
+      <span>JavaScript</span>
+      <span>React</span>
+      <span>Node.js</span>
     </div>
   </section>
 
   <!-- Projects -->
   <section class="section">
-    <h2>Projects</h2>
+    <h1>Projects</h1>
     <div class="projects">
       <div class="project-card">
-        <h3>Mobile App UI</h3>
-        <p>Designed an intuitive mobile app interface in Figma focusing on smooth user flows.</p>
+        <h3 class="h3">Charan's Portfolio</h3>
+        <p>A responsive personal website to showcase my work and skills.</p>
       </div>
       <div class="project-card">
-        <h3>Dashboard Design</h3>
-        <p>Created a responsive admin dashboard UI with clear visual hierarchy.</p>
+        <h3 class="h3">E-Commerce App</h3>
+        <p>Full-stack MERN application with authentication and cart system.</p>
       </div>
       <div class="project-card">
-        <h3>Website Redesign</h3>
-        <p>Redesigned a company website using Adobe XD to improve UX and aesthetics.</p>
+        <h3 class="h3">Task Manager</h3>
+        <p>React + Node.js app for managing team tasks and productivity.</p>
       </div>
     </div>
   </section>
 
   <!-- Contact -->
   <section class="section contact">
-    <h2>Contact</h2>
-    <a href="mailto:vijetha@example.com">Email</a>
-    <a href="https://dribbble.com/">Dribbble</a>
+    <h1>Contact</h1>
+    <a href="mailto:charan@example.com">Email</a>
+    <a href="https://github.com/">GitHub</a>
     <a href="https://linkedin.com/">LinkedIn</a>
   </section>
 
