--- a/join.html
+++ b/join.html
@@ -114,7 +114,7 @@
         <input type="file" id="resume" name="resume" accept=".pdf,.doc,.docx" required />
 
         <label for="message">Cover Letter / Message</label>
-        <textarea id="message" name="message" rows="5" placeholder="Tell us why you’re a great fit..."></textarea>
+        <textarea id="message" name="message" rows="5" placeholder="Tell us why you're a great fit..."></textarea>
 
         <button type="submit">Submit Application</button>
       </form>
