--- a/main freelancers.html
+++ b/main freelancers.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Find Freelancers | JobPortal</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <style>
         * {
             margin: 0;
@@ -389,8 +389,8 @@
             color: white;
         }
 
-        .fa-twitter {
-            /* background: #55ACEE; */
+        .fa-google {
+            /* background: #dd4b39; */
             color: white;
         }
 
@@ -412,11 +412,13 @@
         <div class="container">
             <h1>Find Top Freelancers</h1>
             <p>Connect with skilled professionals from around the world. Hire experts for your projects and get work done efficiently.</p>
-            <div class="search-container">
-                <form action="https://www.google.com/search" method="get" target="_blank">
-                <input type="text" name="q" placeholder="Search on JobSphere...">
-                <button type="submit">Search</button>
-                </form>
+            <div class="contaminated">
+                <div class="search-container">
+                    <form action="https://www.google.com/search" method="get" target="_blank">
+                    <input type="text" name="q" placeholder="Search on JobSphere...">
+                    <button type="submit">Search</button>
+                    </form>
+                </div>
             </div>
         </div>
     </section>
@@ -670,10 +672,10 @@
             </div>
             
             <div class="social-icons">
-                <a href="#"><i class="fa fa-facebook"></i></a>
-                <a href="#"><i class="fa fa-twitter"></i></a>
-                <a href="#"><i class="fa fa-linkedin"></i></a>
-                <a href="#"><i class="fa fa-instagram"></i></a>
+                <a href="https://www.facebook.com/"><i class="fa fa-facebook"></i></a>
+                <a href="https://www.google.com/"><i class="fa fa-google"></i></a>
+                <a href="https://in.linkedin.com/"><i class="fa fa-linkedin"></i></a>
+                <a href="https://www.instagram.com/"><i class="fa fa-instagram"></i></a>
             </div>
             <div class="copyright">
                 &copy; 2025 JobSphere. All rights reserved.
