--- a/terms and conditions.html
+++ b/terms and conditions.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Terms & Conditions</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <style>
     body {
       background-color: #000;
@@ -120,8 +121,8 @@
             color: white;
         }
 
-        .fa-twitter {
-            /* background: #55ACEE; */
+        .fa-google {
+            /* background: #dd4b39; */
             color: white;
         }
 
@@ -188,10 +189,10 @@
             </div>
             
             <div class="social-icons">
-                <a href="#"><i class="fa fa-facebook"></i></a>
-                <a href="#"><i class="fa fa-twitter"></i></a>
-                <a href="#"><i class="fa fa-linkedin"></i></a>
-                <a href="#"><i class="fa fa-instagram"></i></a>
+                <a href="https://www.facebook.com/"><i class="fa fa-facebook"></i></a>
+                <a href="https://www.google.com/"><i class="fa fa-google"></i></a>
+                <a href="https://in.linkedin.com/"><i class="fa fa-linkedin"></i></a>
+                <a href="https://www.instagram.com/"><i class="fa fa-instagram"></i></a>
             </div>
             <div class="copyright">
                 &copy; 2025 JobSphere. All rights reserved.
