--- a/index.html
+++ b/index.html
@@ -573,8 +573,8 @@
             color: white;
         }
 
-        .fa-twitter {
-            /* background: #55ACEE; */
+        .fa-google {
+            /* background: #dd4b39; */
             color: white;
         }
 
@@ -744,10 +744,10 @@
             </div>
             
             <div class="social-icons">
-                <a href="#"><i class="fa fa-facebook"></i></a>
-                <a href="#"><i class="fa fa-twitter"></i></a>
-                <a href="#"><i class="fa fa-linkedin"></i></a>
-                <a href="#"><i class="fa fa-instagram"></i></a>
+                <a href="https://www.facebook.com/"><i class="fa fa-facebook"></i></a>
+                <a href="https://www.google.com/"><i class="fa fa-google"></i></a>
+                <a href="https://in.linkedin.com/"><i class="fa fa-linkedin"></i></a>
+                <a href="https://www.instagram.com/"><i class="fa fa-instagram"></i></a>
             </div>
             <div class="copyright">
                 &copy; 2025 JobSphere. All rights reserved.
